%%{init: {
  "theme": "base",
  "themeVariables": {
    "background": "#ffffff",
    "primaryTextColor": "#111827",
    "lineColor": "#334155",
    "fontFamily": "Helvetica Neue, Helvetica, Arial, sans-serif"
  },
  "class": {
    "htmlLabels": false,
    "nodeSpacing": 24,
    "rankSpacing": 32
  }
}}%%
classDiagram
  direction LR

  class User {
    + id: Long
    + username: String
    + email: String
    + passwordHash: String
    + role: Role
    + status: AccountStatus
  }
  class Student
  class StudentAffairsOfficer
  class DepartmentStaff
  class Admin

  class ComplaintCase {
    + id: Long
    + caseNumber: String
    + title: String
    + description: String
    + status: CaseStatus
    + priority: CasePriority
    + anonymous: boolean
    + trackingCodeHash: String
    + submittedAt: Instant
    + dueAt: Instant
    + resolvedAt: Instant
    + closedAt: Instant
    + overdue: boolean
  }
  class Department {
    + id: Long
    + name: String
    + enabled: boolean
  }
  class Category {
    + id: Long
    + name: String
    + anonymousAllowed: boolean
    + defaultSlaHours: int
  }
  class CaseAttachment {
    + id: Long
    + fileName: String
    + storedPath: String
    + contentType: String
    + uploadedAt: Instant
  }
  class CaseMessage {
    + id: Long
    + content: String
    + internal: boolean
    + createdAt: Instant
  }
  class CaseStatusLog {
    + id: Long
    + oldStatus: CaseStatus
    + newStatus: CaseStatus
    + changedAt: Instant
    + note: String
  }
  class CaseAssignment {
    + id: Long
    + assignmentRole: AssignmentRole
    + assignedAt: Instant
    + departmentId: Long
    + assignedById: Long
  }
  class Notification {
    + id: Long
    + type: NotificationType
    + channel: NotificationChannel
    + content: String
    + sentAt: Instant
    + read: boolean
  }
  class AuditLog {
    + id: Long
    + action: String
    + entityType: String
    + entityId: Long
    + createdAt: Instant
  }
  class SystemSetting {
    + id: Long
    + settingKey: String
    + settingValue: String
  }
  class CrossCuttingRelationships {
    <<note>>
    User 1 -- 0..* CaseMessage : writes
    User 1 -- 0..* CaseStatusLog : changes
    User 1 -- 0..* CaseAssignment : assigns
    User 1 -- 0..* Notification : receives
    User 1 -- 0..* AuditLog : performs
    Admin 1 -- 0..* SystemSetting : manages
  }

  Student --|> User
  StudentAffairsOfficer --|> User
  DepartmentStaff --|> User
  Admin --|> User

  User "0..1" -- "0..*" ComplaintCase : submits
  Category "1" -- "0..*" ComplaintCase : classifies
  Department "0..1" -- "0..*" ComplaintCase : assigned to
  Department "1" -- "0..*" CaseAssignment : receives assignments

  ComplaintCase "1" *-- "0..*" CaseAttachment
  ComplaintCase "1" *-- "0..*" CaseMessage
  ComplaintCase "1" *-- "1..*" CaseStatusLog
  ComplaintCase "1" *-- "0..*" CaseAssignment
  ComplaintCase "1" -- "0..*" Notification

  CrossCuttingRelationships .. User
  CrossCuttingRelationships .. Admin
